[gd_scene load_steps=6 format=3 uid="uid://dgqqsylde5xuo"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_yeum1"]
[ext_resource type="Texture2D" uid="uid://f8uu1nw48mlk" path="res://Sprites/brickz.png" id="2_0s5fr"]
[ext_resource type="Texture2D" uid="uid://stba1h61bw5x" path="res://Sprites/untitled.png" id="2_g76ge"]
[ext_resource type="AudioStream" uid="uid://dhd47je6000pc" path="res://Soundtrack/Pokemon Blue_Red - Pokemon Tower.mp3" id="2_ssnut"]
[ext_resource type="Texture2D" uid="uid://dfhc6e7ihhwpv" path="res://Sprites/untitled5.png" id="3_yam2f"]

[node name="Game_over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yeum1")
icone1 = ExtResource("2_g76ge")
icone2 = ExtResource("3_yam2f")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -2.0
offset_right = 638.0
offset_bottom = 362.0
texture = ExtResource("2_0s5fr")

[node name="OverButton" type="Button" parent="."]
layout_mode = 0
offset_left = 205.0
offset_top = 179.0
offset_right = 421.0
offset_bottom = 210.0
text = " Restart"
metadata/_edit_lock_ = true

[node name="return" type="Button" parent="."]
layout_mode = 0
offset_left = 207.0
offset_top = 219.0
offset_right = 421.0
offset_bottom = 250.0
text = "Return"
metadata/_edit_lock_ = true

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 206.0
offset_top = 261.0
offset_right = 419.0
offset_bottom = 292.0
text = "Exit
"
metadata/_edit_lock_ = true

[node name="song1" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 529.0
offset_top = 274.0
offset_right = 638.0
offset_bottom = 360.0
action_mode = 0
shortcut_feedback = false
shortcut_in_tooltip = false
ignore_texture_size = true
stretch_mode = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ssnut")
parameters/looping = true

[connection signal="pressed" from="OverButton" to="." method="_on_over_button_pressed"]
[connection signal="pressed" from="return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="song1" to="." method="_on_song_1_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
